--- a/thewoodgames_1101/css/main.css
+++ b/thewoodgames_1101/css/main.css
@@ -21,8 +21,10 @@ ul {
   
   }
   .main{
-    width: 980px;
+    width: 100%;
+    max-width: 950px;
     margin: 0 auto;   /* 置中 */
+    padding: 0 15px;
     /* background-color: rgb(247, 245, 177); */
   }
 .main>header{
@@ -50,7 +52,8 @@ ul {
 .main>nav>ul>li{
     /* background-color: aliceblue; */
     display: inline-block;
-    width: 32%;   /*文字inline寬度不會變 inline-block 可以設定寬度*/
+    width: 33.3333%;   /*文字inline寬度不會變 inline-block 可以設定寬度*/
+    margin-right: -12px;
     height: 70px;
     line-height: 70px;    /*行高*/
     text-align: center;   /*文字置中*/
@@ -62,7 +65,6 @@ ul {
   color: #000;
   display: block; /*所以把hover轉成塊級元素就可以擴展到body的寬度*/
   position: relative;
-
 }
 .main>nav>ul>li>.nav_item>.nav_child {
   display: none;
@@ -79,9 +81,9 @@ ul {
   line-height: 35px;
   padding: 10px 20px;
   text-align: left;
-  
+
 }
-.main>nav>ul>li>.nav_item > .nav_child :hover a{
+.main>nav>ul>li>.nav_item > .nav_child a:hover {
   background-color: #000;
 }
 .main>nav>ul>li>.nav_item:hover{
@@ -96,5 +98,12 @@ ul {
 }
 .en_text{
     color: #8a8002;
+}
+
+
+@media(max-width:992px){
+  .main>nav>ul>li{
+    width: 100%;
+  }
 }
 
