--- a/thewoodgames_1101/css/main.css
+++ b/thewoodgames_1101/css/main.css
@@ -55,28 +55,22 @@ ul {
 .main>nav>ul>li{
     /* background-color: aliceblue; */
     /* 下面這是display inline-block 的排版方式 */
-    /* display: inline-block;
-    width: 33.3333%;   文字inline寬度不會變 inline-block 可以設定寬度
-    margin-right: -12px; 
-
-    /* 
-    這是 display flex的排版方式
-    */
-    flex: 1;
-
-
-
-    height: 70px;
-    line-height: 70px;    /*行高*/
-    text-align: center;   /*文字置中*/
-    font-size: 26px;
+    display: inline-block;
+    width: 33.3333%;  /*文字inline寬度不會變 inline-block 可以設定寬度 */
+    /* margin-right: -15px;  */
+    /* 這是 display flex的排版方式 */
+    line-height: 70px;    /*行高 */
+    text-align: center;
+    font-size: 20px;
     font-weight: bold;
+    flex: 1;
 }
 .main>nav>ul>li>.nav_item{
   text-decoration: none;
   color: #000;
   display: block; /*所以把hover轉成塊級元素就可以擴展到body的寬度*/
   position: relative;
+  width: 100%;
 }
 .main>nav>ul>li>.nav_item>.nav_child {
   display: none;
@@ -111,7 +105,9 @@ ul {
 .en_text{
     color: #8a8002;
 }
-
+.product_img{
+  width: 100%;
+}
 /* shop 的 CSS */
 .main>.shop_content>.p_cotent{
   color: #58595B;
@@ -122,23 +118,58 @@ ul {
 .shop_content>.item_wrap{
   border: 1px solid #8a8002;
   font-weight: bold;
-  
+  width: 100%;  
 }
 .shop_content>.item_wrap>.item_row{
   display: flex;
   padding: 15px;
+  gap: 15px;
 }
-.shop_content>.item_wrap>.item_row>div{
-  flex: 1;
+.shop_content>.item_wrap>.item_row>.item_right{
+  width: 40%;
 }
+.shop_content>.item_wrap>.item_row>.item_left{
+  width: 20%;
+}
+.shop_content>.item_wrap>.item_row>.item_mid{
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+
+  /* position: relative; */
+}
+/* .price{
+  position: absolute;
+  bottom: 0;
+} */
+.item_mid>h2{
+  margin: 0;
+  font-size: 50px;
+  line-height: 60px;
+  margin-bottom : auto;
+}
+.price{
+  color: #8a8002;
+  font-size: 30px;
+
+}
+
+
 .shop_content>.item_wrap>.item_row>.item_right .item_title{
   border-bottom: 1px solid #8a8002;
-  font-weight: bold;
-  padding-bottom: 5px;
+  padding-bottom: 3px;
 }
 .shop_content>.item_wrap>.item_row>.item_right .item_child{
   display: flex;
   margin-top: 10px;
+}
+.item_child>.item_child_left{
+  /* margin-right: auto; */
+  flex: 1; /*自動延展*/
+}
+.item_child>.item_child_right{
+  padding-top: 20px;
 }
 .price_txt{
   color: #8a8002;
@@ -150,22 +181,21 @@ ul {
   font-size: 25px;
 }
 .buy_btn{
-  margin-left: 70px;
+
   text-decoration: none;
   background-color: #8a8002;
   color: #FFF;
-  padding: 15px;
-  padding-top: 10px;
-  display: block;
+  padding: 13px;
+  /* display: inline-block; */
   border-radius: 30px;
 }
 .buy_btn:hover{
   background-color: #000;
 }
 
-.shop_content>.item_wrap .item_left img{
+/* .shop_content>.item_wrap .item_left img{
   width: 300px;
-}
+} */
 
 
 @media(max-width:992px){
@@ -175,6 +205,18 @@ ul {
   .main>nav>ul>li{
     width: 100%;
   }
+  .shop_content>.item_wrap>.item_row{
+    flex-direction: column;
+  }
+  .shop_content>.item_wrap>.item_row>.item_left{
+    width: 100%;
+  }
+  .shop_content>.item_wrap>.item_row>.item_mid {
+    width: 100%;
+  }
+  .shop_content>.item_wrap>.item_row>.item_right {
+    width: 100%;
   
+  }
 }
 
